# ai-assistannt

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  assistant_test.ipynb
app/api/: routes.py
app/core/: config.py  dependencies.py
app/graphs/: agent_graph.py
app/integrations/: backend_client.py  errors.py
app/observability/: langsmith.py
app/profile/: models.py
app/prompting/: __init__.py  loader.py  renderer.py
app/providers/: base.py  dashscope.py  errors.py  kimi.py  openai.py  openai_compatible.py  registry.py
app/schemas/: agent.py  translation.py
app/services/: assistant_service.py  chat_context.py  translation_service.py
app/skills/: __init__.py  context_builder.py
app/state/: __init__.py  models.py  redis_store.py
app/tools/: explain.py  registry.py  translate.py
app/ui/: __init__.py  chat_page.py
docs/architecture/: agent-platform-directory-plan.md  ai-assistant-overall-design.md
prompts/assistant/: system.md
prompts/translation/: diagnosis.md  system.md
skills/translation-learning/: SKILL.md
tests/: test_agent_graph.py  test_agent_route.py  test_assistant_route.py  test_assistant_service.py  test_backend_client.py  test_config.py  test_dependencies.py  test_explain_tool.py  test_health.py  test_prompting.py  test_provider_config.py  test_redis_store.py  test_skill_context_builder.py  test_translate_tool.py  test_translation_agent.py  test_translation_profile_updater.py  test_translation_route.py  test_translation_schema.py  test_translation_signal_extractor.py
(+48 files in other folders)
